# acl15-clnndep

./: ArcStandard.cpp  ArcStandard.h  CMakeLists.txt  Classifier.cpp  Classifier.h  ClassifierEigen.cpp  ClassifierEigen.h  Config.cpp  Config.h  Configuration.cpp  Configuration.h  DSCTree.cpp  DSCTree.h  DSC_Classifier.cpp  DSC_Classifier.h  DSC_Dataset.h  DSC_DependencyParser.cpp  DSC_DependencyParser.h  Dataset.cpp  DependencyParser.cpp  DependencyParser.h  DependencyParserEigen.cpp  DependencyParserEigen.h  DependencySent.cpp  DependencySent.h  DependencyTree.cpp  FSC_Classifier.cpp  FSC_Classifier.h  FSC_DependencyParser.cpp  Makefile  ParsingSystem.cpp  ParsingSystem.h  README.md  ThreadPool.h  Util.h  cltest.sh  cltest_cca.sh  cltest_cca_dist_valency.sh  cltest_delex.sh  cltest_delex_dist.sh  (+34 more)
conf/: cca-dvc.cfg  nndep.cfg  nndep_debug.cfg  nndep_delex.cfg  nndep_delex_d_v.cfg  nndep_delex_d_v_c.cfg  nndep_delex_dist.cfg  nndep_delex_dist_valency.cfg  nndep_full.cfg  nndep_full_d_v.cfg  nndep_full_dist.cfg  nndep_full_dist_valency.cfg  nndep_mono.cfg  nndep_mono_d_v.cfg  nndep_mono_d_v_c.cfg  nndep_mono_dist_valency.cfg  proj-dvc.cfg
jobs/: train_delex.sh  train_delex_udt.sh  train_en-de.sh  train_en-es.sh  trial_qsub.sh
ptb/: append_wordcluster.py  dev-brown-1024.dep  dev-brown-256.dep  dev-brown-512.dep  dev-proj-brown.dep  reports.txt
resources/cca/: download.sh
resources/clusters/: de.256.train.p  en.256  es.256.train.p  fr.256.train.p  post_process_de.py  post_process_es.py  post_process_fr.py  project_cls.py  (+1 more)
scripts/: test-CCA.sh  test-PROJ.sh  train-CCA.sh  train-PROJ.sh
src/: ArcStandard.cpp  ArcStandard.h  CMakeLists.txt  Classifier.h  ClassifierEigen.cpp  DSCTree.cpp  DSC_Classifier.cpp  DSC_Dataset.cpp  DSC_DependencyParser.cpp  DW_Classifier.cpp  DW_DependencyParser.cpp  DW_DependencyParser.h  Dataset.cpp  Dataset.h  DependencyParser.cpp  DependencyParserEigen.cpp  DependencyParserEigen.h  DependencySent.h  DependencyTree.h  FSC_Classifier.h  FSC_DependencyParser.cpp  FSC_DependencyParser.h  ParsingSystem.cpp  Util.h  eval.cpp  nndep_dsc.cpp  nndep_eigen.cpp  nndep_fsc.cpp  test_util.cpp  time.h
src/utils/math/: mat.h
utils/: strutils.h
(+17 files in other folders)
